fix: make post titles a bit smaller on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -434,6 +434,10 @@ div.content > div.metadata > div > p {
     display: none;
   }
 
+  div.content > div.metadata > h1 {
+    font-size: 24px;
+  }
+
   ul.posts > li > a > div.metadata > h1 {
     font-size: 16px;
   }
